fix vertical margin on mobile

--- a/src/styles/blocks/wp-block-media-text.css
+++ b/src/styles/blocks/wp-block-media-text.css
@@ -1,4 +1,11 @@
+.is-stacked-on-mobile > .wp-block-media-text__content {
+	margin-top: 1em;
+}
+
 @screen sm {
+	.is-stacked-on-mobile > .wp-block-media-text__content {
+		margin-top: 0;
+	}
 	.wp-block-media-text__content > :first-child {
 		margin-top: 0;
 	}
